snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.7__src__include__fst__extensions__mpdt__reverse.h.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.7/src/include/fst/extensions/mpdt/reverse.h",
    ),
    start_line: 1,
    end_line: 54,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "fst",
            ),
            start_line: 16,
            end_line: 52,
            kind: Namespace,
            spaces: [
                FuncSpace {
                    name: Some(
                        "Reverse",
                    ),
                    start_line: 20,
                    end_line: 50,
                    kind: Function,
                    spaces: [],
                    metrics: CodeMetrics {
                        nargs: Stats {
                            fn_nargs: 4,
                            closure_nargs: 0,
                            fn_nargs_sum: 4,
                            closure_nargs_sum: 0,
                            fn_nargs_min: 4,
                            closure_nargs_min: 0,
                            fn_nargs_max: 4,
                            closure_nargs_max: 0,
                            total_functions: 1,
                            total_closures: 0,
                        },
                        nexits: Stats {
                            exit: 0,
                            exit_sum: 0,
                            total_space_functions: 1,
                            exit_min: 0,
                            exit_max: 0,
                        },
                        cognitive: Stats {
                            structural: 2,
                            structural_sum: 2,
                            structural_min: 2,
                            structural_max: 2,
                            nesting: 0,
                            total_space_functions: 1,
                            boolean_seq: BoolSequence {
                                boolean_op: None,
                            },
                        },
                        cyclomatic: Stats {
                            cyclomatic_sum: 6.0,
                            cyclomatic: 6.0,
                            n: 1,
                            cyclomatic_max: 6.0,
                            cyclomatic_min: 6.0,
                        },
                        halstead: Stats {
                            u_operators: 18,
                            operators: 106,
                            u_operands: 26,
                            operands: 72,
                        },
                        loc: Stats {
                            sloc: Sloc {
                                start: 19,
                                end: 49,
                                unit: false,
                                sloc_min: 31,
                                sloc_max: 31,
                            },
                            ploc: Ploc {
                                lines: {
                                    32,
                                    29,
                                    26,
                                    23,
                                    20,
                                    49,
                                    46,
                                    43,
                                    40,
                                    37,
                                    34,
                                    31,
                                    28,
                                    22,
                                    19,
                                    48,
                                    42,
                                    39,
                                    36,
                                    33,
                                    30,
                                    24,
                                    21,
                                    47,
                                    44,
                                    41,
                                    38,
                                },
                                ploc_min: 27,
                                ploc_max: 27,
                            },
                            cloc: Cloc {
                                only_comment_lines: 4,
                                code_comment_lines: 0,
                                comment_line_end: Some(
                                    45,
                                ),
                                cloc_min: 4,
                                cloc_max: 4,
                            },
                            lloc: Lloc {
                                logical_lines: 13,
                                lloc_min: 13,
                                lloc_max: 13,
                            },
                            space_count: 1,
                            blank_min: 0,
                            blank_max: 0,
                        },
                        nom: Stats {
                            functions: 1,
                            closures: 0,
                            functions_sum: 1,
                            closures_sum: 0,
                            functions_min: 1,
                            functions_max: 1,
                            closures_min: 0,
                            closures_max: 0,
                            space_count: 1,
                        },
                        mi: Stats {
                            halstead_length: 178.0,
                            halstead_vocabulary: 44.0,
                            halstead_volume: 971.7788281174389,
                            cyclomatic: 6.0,
                            sloc: 31.0,
                            comments_percentage: 0.12903225806451613,
                        },
                        abc: Stats {
                            assignments: 0.0,
                            assignments_sum: 0.0,
                            assignments_min: 0.0,
                            assignments_max: 0.0,
                            branches: 0.0,
                            branches_sum: 0.0,
                            branches_min: 0.0,
                            branches_max: 0.0,
                            conditions: 0.0,
                            conditions_sum: 0.0,
                            conditions_min: 0.0,
                            conditions_max: 0.0,
                            space_count: 1,
                            declaration: [],
                        },
                        wmc: Stats {
                            cyclomatic: 0.0,
                            class_wmc: 0.0,
                            interface_wmc: 0.0,
                            class_wmc_sum: 0.0,
                            interface_wmc_sum: 0.0,
                            space_kind: Unknown,
                        },
                        npm: Stats {
                            class_npm: 0,
                            interface_npm: 0,
                            class_nm: 0,
                            interface_nm: 0,
                            class_npm_sum: 0,
                            interface_npm_sum: 0,
                            class_nm_sum: 0,
                            interface_nm_sum: 0,
                            is_class_space: false,
                        },
                        npa: Stats {
                            class_npa: 0,
                            interface_npa: 0,
                            class_na: 0,
                            interface_na: 0,
                            class_npa_sum: 0,
                            interface_npa_sum: 0,
                            class_na_sum: 0,
                            interface_na_sum: 0,
                            is_class_space: false,
                        },
                    },
                },
            ],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 0,
                    closure_nargs: 0,
                    fn_nargs_sum: 4,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 0,
                    closure_nargs_min: 0,
                    fn_nargs_max: 4,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 0,
                    exit_sum: 0,
                    total_space_functions: 1,
                    exit_min: 0,
                    exit_max: 0,
                },
                cognitive: Stats {
                    structural: 0,
                    structural_sum: 2,
                    structural_min: 0,
                    structural_max: 2,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 7.0,
                    cyclomatic: 1.0,
                    n: 2,
                    cyclomatic_max: 6.0,
                    cyclomatic_min: 1.0,
                },
                halstead: Stats {
                    u_operators: 18,
                    operators: 110,
                    u_operands: 27,
                    operands: 75,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 15,
                        end: 51,
                        unit: false,
                        sloc_min: 31,
                        sloc_max: 31,
                    },
                    ploc: Ploc {
                        lines: {
                            49,
                            46,
                            43,
                            40,
                            37,
                            34,
                            31,
                            28,
                            22,
                            19,
                            47,
                            44,
                            41,
                            38,
                            32,
                            29,
                            26,
                            23,
                            20,
                            51,
                            48,
                            42,
                            39,
                            36,
                            33,
                            30,
                            24,
                            21,
                            18,
                            15,
                        },
                        ploc_min: 27,
                        ploc_max: 27,
                    },
                    cloc: Cloc {
                        only_comment_lines: 5,
                        code_comment_lines: 0,
                        comment_line_end: Some(
                            17,
                        ),
                        cloc_min: 4,
                        cloc_max: 4,
                    },
                    lloc: Lloc {
                        logical_lines: 13,
                        lloc_min: 13,
                        lloc_max: 13,
                    },
                    space_count: 2,
                    blank_min: 0,
                    blank_max: 0,
                },
                nom: Stats {
                    functions: 0,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 0,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 2,
                },
                mi: Stats {
                    halstead_length: 185.0,
                    halstead_vocabulary: 45.0,
                    halstead_volume: 1015.9928228209899,
                    cyclomatic: 7.0,
                    sloc: 37.0,
                    comments_percentage: 0.13513513513513514,
                },
                abc: Stats {
                    assignments: 0.0,
                    assignments_sum: 0.0,
                    assignments_min: 0.0,
                    assignments_max: 0.0,
                    branches: 0.0,
                    branches_sum: 0.0,
                    branches_min: 0.0,
                    branches_max: 0.0,
                    conditions: 0.0,
                    conditions_sum: 0.0,
                    conditions_min: 0.0,
                    conditions_max: 0.0,
                    space_count: 2,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.0,
                    class_wmc: 0.0,
                    interface_wmc: 0.0,
                    class_wmc_sum: 0.0,
                    interface_wmc_sum: 0.0,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: false,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: false,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 4,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 4,
            closure_nargs_max: 0,
            total_functions: 1,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 0,
            total_space_functions: 1,
            exit_min: 0,
            exit_max: 0,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 2,
            structural_min: 0,
            structural_max: 2,
            nesting: 0,
            total_space_functions: 1,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 8.0,
            cyclomatic: 1.0,
            n: 3,
            cyclomatic_max: 6.0,
            cyclomatic_min: 1.0,
        },
        halstead: Stats {
            u_operators: 18,
            operators: 110,
            u_operands: 28,
            operands: 77,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 54,
                unit: true,
                sloc_min: 37,
                sloc_max: 37,
            },
            ploc: Ploc {
                lines: {
                    49,
                    46,
                    43,
                    40,
                    37,
                    34,
                    31,
                    28,
                    22,
                    19,
                    13,
                    53,
                    47,
                    44,
                    41,
                    38,
                    32,
                    29,
                    26,
                    23,
                    20,
                    11,
                    8,
                    5,
                    51,
                    48,
                    42,
                    39,
                    36,
                    33,
                    30,
                    24,
                    21,
                    18,
                    15,
                    12,
                    9,
                    6,
                },
                ploc_min: 30,
                ploc_max: 30,
            },
            cloc: Cloc {
                only_comment_lines: 9,
                code_comment_lines: 2,
                comment_line_end: Some(
                    3,
                ),
                cloc_min: 5,
                cloc_max: 5,
            },
            lloc: Lloc {
                logical_lines: 13,
                lloc_min: 13,
                lloc_max: 13,
            },
            space_count: 3,
            blank_min: 2,
            blank_max: 2,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 1,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 0,
            space_count: 3,
        },
        mi: Stats {
            halstead_length: 187.0,
            halstead_vocabulary: 46.0,
            halstead_volume: 1032.9060857826614,
            cyclomatic: 8.0,
            sloc: 54.0,
            comments_percentage: 0.2037037037037037,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 3,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
